tests/ui/type-alias-impl-trait/issue-60407.stderr
error: fatal error triggered by #[crablangc_error]
  --> $DIR/issue-60407.rs:8:1
   |
LL | fn main() {
   | ^^^^^^^^^

error: aborting due to previous error

